--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^8.3.3",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "react": "17.0.2",
